<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title_one"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textColor="@color/purple_200"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title_age"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:background="@color/purple_500"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title_minutes"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textColor="@color/purple_200"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="56dp"
        />
    <Button
        android:id="@+id/selectDateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/selectedDateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_default_date"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@color/purple_200"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_selected_date"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/light_gray" />

    <TextView
        android:id="@+id/valInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_default_date"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@color/purple_200"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_in_minutes"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/light_gray"
        android:layout_marginBottom="56dp"/>


</LinearLayout>